<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/donutSelector"
        android:layout_width="273dp"
        android:layout_height="301dp"
        android:layout_marginStart="49dp"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="49dp"
        android:layout_marginRight="49dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutTitle" />

    <TextView
        android:id="@+id/donutTitle"
        android:layout_width="284dp"
        android:layout_height="44dp"
        android:layout_marginStart="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:text="@string/select_donut_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/donutQuantitySelector"
        android:layout_width="96dp"
        android:layout_height="48dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutSelector" />

    <TextView
        android:id="@+id/displaySelectedDonut"
        android:layout_width="170dp"
        android:layout_height="36dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/donut_type"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutSelector" />

    <Button
        android:id="@+id/addDonutToCart"
        android:layout_width="274dp"
        android:layout_height="68dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:onClick="addDonutToCart"
        android:text="@string/add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showPrice" />

    <TextView
        android:id="@+id/showPrice"
        android:layout_width="112dp"
        android:layout_height="33dp"
        android:layout_marginStart="140dp"
        android:layout_marginLeft="140dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="141dp"
        android:layout_marginRight="141dp"
        android:text="@string/start_dynamic_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donutQuantitySelector" />
</androidx.constraintlayout.widget.ConstraintLayout>